Little improvement: don't create a new Boolean but reuse the Boolean.TRUE/FALSE static instances